<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/memo"
    android:fitsSystemWindows="true"

    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/relativeLayout2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"

            android:id="@+id/relativeLayout">


            <ImageView
                android:id="@+id/add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:src="@drawable/add_item"
               />

            <TextView
                android:id="@+id/textView_title"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"

                android:layout_margin="10dp"
                android:textColor="#597584"
                android:text="@string/notebook" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/back_item" />

        </RelativeLayout>

        <TableLayout
            android:id="@+id/typelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            android:layout_below="@+id/relativeLayout"
            >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/idea"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/round_memo"
                    android:translationZ="2dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="42dp"
                        android:src="@drawable/idea_item" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/idea"
                        android:textColor="@color/memo_big"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewidea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="11dp"
                        android:text="100 条记录"
                        android:textColor="@color/memo_small"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/work"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_marginLeft="43dp"
                    android:translationZ="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/round_memo"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="42dp"
                        android:src="@drawable/work_item" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/work"
                        android:textColor="@color/memo_big"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="11dp"
                        android:text="100 条记录"
                        android:textColor="@color/memo_small"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cards"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_marginLeft="43dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="56dp"
                    android:translationZ="2dp"
                    android:background="@drawable/round_memo"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="42dp"
                        android:id="@+id/imageViewcards"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/cards_item" />

                    <TextView
                        android:id="@+id/textViewcards2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/memo_big"
                        android:textSize="14sp"
                        android:text="@string/cards" />

                    <TextView
                        android:id="@+id/textViewcards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_gravity="center"
                        android:textColor="@color/memo_small"
                        android:textSize="10sp"
                        android:text="100 条记录" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/read"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/round_memo"
                    android:translationZ="2dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewread"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="42dp"
                        android:src="@drawable/read_item" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/read"
                        android:textColor="@color/memo_big"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewread"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="11dp"
                        android:text="100 条记录"
                        android:textColor="@color/memo_small"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bill"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_marginLeft="43dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/round_memo"
                    android:translationZ="2dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewbill"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="42dp"
                        android:src="@drawable/bill_item" />

                    <TextView
                        android:id="@+id/textView333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/bill"
                        android:textColor="@color/memo_big"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewbill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="11dp"
                        android:text="100 条记录"
                        android:textColor="@color/memo_small"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/game"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="43dp"
                    android:layout_marginRight="56dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/round_memo"
                    android:translationZ="2dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewgame"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="42dp"
                        android:src="@drawable/games_item" />

                    <TextView
                        android:id="@+id/textViewgame2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/games"
                        android:textColor="@color/memo_big"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewgame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="11dp"
                        android:text="100 条记录"
                        android:textColor="@color/memo_small"
                        android:textSize="10sp" />

                </LinearLayout>
            </TableRow>

        </TableLayout>

        <com.huewu.pla.lib.MultiColumnListView
            android:id="@+id/list"
            xmlns:pla="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:divider="@null"
            pla:plaColumnNumber="2"
            android:layout_marginLeft="30dp"



            pla:plaLandscapeColumnNumber="2"
            android:layout_below="@+id/relativeLayout"
           android:visibility="gone"
           ></com.huewu.pla.lib.MultiColumnListView>


    </RelativeLayout>

    <TextView
        android:id="@+id/textView_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:textColor="#597584"
        android:textSize="20sp"
        android:text="@string/empty" />


</RelativeLayout>
